--- a/cart.html
+++ b/cart.html
@@ -21,6 +21,11 @@
 </head>
 
 <body>
+  <div id="preloader">
+    <img src="assets/imgs/tatbelalogo.svg" alt="tatbela logo skepr مطعم تتبيلة ,ملوك الكريب في مصر"><br>
+    <a class="power" href="https://iskepr.web.app">تم برمجة الموقع بواسطة <span>@سكيبر</span></a>
+  </div>
+  <img class="pflag" src="assets/imgs/palestine.webp" alt="free palestine for ever tatbela Restaurant">
   <header>
     <a href="menu.html">
       <div class="but">
@@ -36,13 +41,16 @@
     <a href="cart.html">
       <div class="but active">
         <div class="icon">
+          <span id="cartball"></span>
           <img src="assets/imgs/carticon.svg" alt="">
         </div>
         <h3>السلة</h3>
       </div>
     </a>
   </header>
-
+  <!-- alart -->
+  <div class="alert"></div>
+  <!-- cart -->
   <div class="cart-container">
     <h1>السلة</h1>
     <div id="cart-items"></div>
@@ -70,4 +78,5 @@
   <script src="js/smtp.js"></script>
   <script src="main.js"></script>
 </body>
+
 </html>
