--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     <img src="assets/imgs/tatbelalogo.svg" alt="tatbela logo skepr مطعم تتبيلة ,ملوك الكريب في مصر"><br>
     <a class="power" href="https://iskepr.web.app">تم برمجة الموقع بواسطة <span>@سكيبر</span></a>
   </div>
+  <img class="pflag" src="assets/imgs/palestine.webp" alt="free palestine for ever tatbela Restaurant">
   <header>
     <a href="menu.html">
       <div class="but">
@@ -90,12 +91,15 @@
     <a href="cart.html">
       <div class="but">
         <div class="icon">
+          <span id="cartball"></span>
           <img src="assets/imgs/carticon.svg" alt="مطعم تتبيلة ,ملوك الكريب في مصر">
         </div>
         <h3>السلة</h3>
       </div>
     </a>
   </header>
+  <!-- alart -->
+  <div class="alert"></div>
   <!-- first -->
   <section class="secone" data-aos="fade-up" data-aos-delay="100">
     <div class="back">
@@ -119,15 +123,15 @@
   </section>
   <!-- most seel -->
   <section class="scrollprod" data-aos="fade-up">
-      <img class="logoframe" src="assets/imgs/logoframe.svg" alt="مطعم تتبيلة ,ملوك الكريب في مصر">
-      <div class="top">
-        <div class="text">
-          <h2>أشهر الوجبات</h2>
-          <h3>الاكثر مبيعاً</h3>
-        </div>
-        <a href="menu.html" class="mainbut">المزيد</a>
+    <img class="logoframe" src="assets/imgs/logoframe.svg" alt="مطعم تتبيلة ,ملوك الكريب في مصر">
+    <div class="top">
+      <div class="text">
+        <h2>أشهر الوجبات</h2>
+        <h3>الاكثر مبيعاً</h3>
       </div>
-      <div class="products" id="topsall"></div>
+      <a href="menu.html" class="mainbut">المزيد</a>
+    </div>
+    <div class="products" id="topsall"></div>
   </section>
   <br><br><br><br>
   <!-- new products -->
@@ -169,7 +173,8 @@
       <a href="https://www.instagram.com/tatbela_restaurant"><img src="assets/imgs/instagram.png"
           alt="instagram tatbela مطعم تتبيلة ,ملوك الكريب في مصر"></a>
     </div>
-    <a class="power" href="https://iskepr.web.app">تم برمجة الموقع بواسطة <span>@سكيبر</span>
+    <a class="power" href="https://iskepr.web.app" aria-label="skeprcontact@gmail.com">تم برمجة الموقع بواسطة
+      <span>@سكيبر</span>
   </footer>
 
   <script src="main.js"></script>
