--- a/menu.html
+++ b/menu.html
@@ -17,6 +17,7 @@
   <!-- style -->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="css/aos.css" />
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 </head>
 
@@ -53,69 +54,73 @@
   <!-- سيتم هنا إضافة الأقسام -->
   <div id="products-container"></div>
 
-  <script src="js/jquery-3.7.1.min.js"></script>
   <script src="js/aos.js"></script>
   <script src="main.js"></script>
   <script>
     AOS.init();
+  </script>
+  <script>
+document.addEventListener("DOMContentLoaded", async () => {
+  const supabaseUrl = 'https://muxhkzdlulrsrskhqgsp.supabase.co';
+  const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im11eGhremRsdWxyc3Jza2hxZ3NwIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzYwODM4NzcsImV4cCI6MjA1MTY1OTg3N30.WAbPm9IhEX-aS5An5fxrmMVd4JdIgxA2Qhypu_6gMQY';
+  const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
-    // جلب البيانات من ملف JSON
-    $.ajax({
-      url: "data/products.json",
-      dataType: "json",
-      caches: true,
-      success: function (data, status) {
-        // تجميع المنتجات حسب النوع
-        let groupedByType = {};
-        $.each(data, function (index, product) {
-          if (!groupedByType[product.النوع]) {
-            groupedByType[product.النوع] = [];
-          }
-          groupedByType[product.النوع].push(product);
-        });
+  try {
+    // جلب البيانات من Supabase
+    const { data, error } = await supabase
+      .from('products') // تأكد من أن اسم الجدول "products"
+      .select('*'); // تحديد الأعمدة التي تحتاجها، مثل '*' لجميع الأعمدة
 
-        // عرض كل نوع في سيكشن منفصل
-        $.each(groupedByType, function (type, products) {
-          let sectionHTML = `
-            <section class="scrollprod ${type.length % 2 ? 'newproducts' : ''}" data-aos="fade-up">
-              <img class="logoframe" src="assets/imgs/logoframe.svg" alt="">
-              <div class="top">
-                <div class="text">
-                  <h2>أحدث الوجبات</h2>
-                  <h3>${type}</h3>
-                </div>
-                <a href="#" class="mainbut" onclick="shareLink(event)">مشاركة</a>
-              </div>
-              <div class="products">`;
+    if (error) throw error;
 
-          // إضافة المنتجات التي تنتمي لهذا النوع
-          $.each(products, function (index, product) {
-            sectionHTML += `
-              <a href="product.html?id=${product.المعرف}">
-                <div class="product">
-                  <img src="${product.الصورة}" alt="${product.الاسم}">
-                  <div class="detals">
-                    <h2><span>${product.الاسم}</span></h2>
-                    <h4>${product.وصف}</h4>
-                    <h2><span>${product.السعر}</span> جنية</h2>
-                  </div>
-                </div>
-              </a>`;
-          });
-
-          sectionHTML += `</div></section>`;
-
-          // إضافة القسم إلى الصفحة
-          $("#products-container").append(sectionHTML);
-        });
-      },
-      error: function (xhr, textStatus, err) {
-        console.error(xhr);
-        console.error(err);
-        console.error(textStatus);
-        console.error(xhr.statusText);
+    // تجميع المنتجات حسب النوع
+    let groupedByType = {};
+    data.forEach(product => {
+      if (!groupedByType[product.النوع]) {
+        groupedByType[product.النوع] = [];
       }
+      groupedByType[product.النوع].push(product);
     });
+
+    // عرض كل نوع في سيكشن منفصل
+    Object.keys(groupedByType).forEach(type => {
+      let sectionHTML = `
+        <section class="scrollprod ${type.length % 2 ? 'newproducts' : ''}" data-aos="fade-up">
+          <img class="logoframe" src="assets/imgs/logoframe.svg" alt="">
+          <div class="top">
+            <div class="text">
+              <h2>أحدث الوجبات</h2>
+              <h3>${type}</h3>
+            </div>
+            <a href="#" class="mainbut" onclick="shareLink(event)">مشاركة</a>
+          </div>
+          <div class="products">`;
+
+      // إضافة المنتجات التي تنتمي لهذا النوع
+      groupedByType[type].forEach(product => {
+        sectionHTML += `
+          <a href="product.html?id=${product.id}">
+            <div class="product">
+              <img src="${product.الصورة}" alt="${product.الاسم}">
+              <div class="detals">
+                <h2><span>${product.الاسم}</span></h2>
+                <h4>${product.وصف}</h4>
+                <h2><span>${product.السعر}</span> جنية</h2>
+              </div>
+            </div>
+          </a>`;
+      });
+
+      sectionHTML += `</div></section>`;
+
+      // إضافة القسم إلى الصفحة
+      document.getElementById("products-container").innerHTML += sectionHTML;
+    });
+  } catch (error) {
+    console.error('Error fetching data:', error);
+  }
+});
+
   </script>
   <script>
     function shareLink(event) {
