--- a/cart.html
+++ b/cart.html
@@ -18,6 +18,8 @@
   <!-- style -->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="css/aos.css" />
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
 </head>
 
 <body>
